[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/ak47.png" type="Texture" id=1]
[ext_resource path="res://Code/Arma.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/DISPARO.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.5, 45 )

[node name="Arma" type="Node2D" groups=["Arma"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShootingPoint" type="Node2D" parent="."]
position = Vector2( 6, 44 )

[node name="Pium" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.5

[node name="ArmaCatch" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArmaCatch"]
position = Vector2( 6.5, 2 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 44 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="ArmaCatch" to="." method="_on_ArmaCatch_area_entered"]
